--- a/style.css
+++ b/style.css
@@ -425,7 +425,7 @@ section {
 }
 
 
-/* ================= Education Section ================= */
+/*Education Section css-------------------------------------*/
 
 .education {
     background: var(--bg-color);
