--- a/style.css
+++ b/style.css
@@ -721,7 +721,7 @@ section {
 
 .projects-gallery {
     display: grid;
-    grid-template-columns: repeat(3, minmax(270px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
     gap: 2rem;
 }
 
